# AIngram

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  llms.txt  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
aingram/: __init__.py  cli.py  config.py  exceptions.py  mcp_server.py  pipeline.py  store.py  telemetry.py  types.py  watch.py  worker.py
aingram/capture/: __init__.py  config.py  daemon.py  drain.py  filters.py  queue.py  schema.py  types.py
aingram/consolidation/: __init__.py  contradiction.py  deberta.py  decay.py  knowledge.py  merger.py
aingram/extraction/: __init__.py  local.py  protocol.py  sonnet.py
aingram/graph/: __init__.py  builder.py  traversal.py
aingram/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  langgraph.py  smolagents.py
aingram/models/: manager.py
aingram/processing/: __init__.py  capabilities.py  classifier.py  embedder.py  extractor.py  llm.py  protocols.py  qjl.py
examples/: 01_basic_remember_recall.py  02_store_stats.py  03_recall_with_entry_type.py  05_multi_agent_shared_memory.py  README.md
landing_page/: blog.html  blog.js  build.js  index.html  robots.txt  script.js  server.py  sitemap.xml  style.css  vercel.json
scripts/: bench.py  seed_bench_db.py
tests/: conftest.py  test_cli.py  test_config.py  test_consolidation_v3.py  test_decay_functions.py  test_examples.py  test_exceptions.py  test_graph_v3.py  test_integration_v3.py  test_knowledge_synthesis.py  test_mcp_server.py  test_npu_provider.py  test_phase2_integration.py  test_pro_isolation.py  test_qjl.py  test_qjl_search.py  test_retrieval_v3.py  test_rrf.py  test_store_v3.py  test_telemetry.py  test_types.py  test_viz.py  test_watch.py  test_worker_v3.py
(+86 files in other folders)
