[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aingram"
version = "1.1.0"
description = "Local-first, privacy-first agent memory — Lite edition (Apache-2.0)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "AIngram Contributors" }
]

dependencies = [
    "httpx>=0.27.0",
    "sqlite-vec>=0.1.6",
    "onnxruntime>=1.17.0",
    "numpy>=1.24.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
    "typer>=0.12.0",
    "cryptography>=44.0.0",
    "rfc8785>=0.1.2",
]

[project.scripts]
aingram = "aingram.cli:main_entry"

[project.optional-dependencies]
# NVIDIA CUDA 12 pip wheels for ORT GPU (cuFFT is required; not pulled in by cublas/cudnn alone).
# Use after: pip uninstall -y onnxruntime && pip install onnxruntime-gpu
gpu = [
    "nvidia-cuda-runtime-cu12>=12.0.140",
    "nvidia-cublas-cu12>=12.0.0",
    "nvidia-cudnn-cu12>=9.0.0",
    "nvidia-cufft-cu12>=11.0.0",
]
api = ["anthropic>=0.40.0"]
extraction = ["gliner>=0.2.0"]
llm = ["httpx>=0.27.0"]
mcp = ["mcp>=1.0.0"]
cli = ["typer>=0.12.0"]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.40"]
langgraph = ["langgraph>=0.2"]
autogen = ["autogen-agentchat>=0.4"]
smolagents = ["smolagents>=1.0"]
all = ["aingram[mcp,extraction,llm,cli,langchain,crewai,langgraph,autogen,smolagents]"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "typer>=0.12.0",
    "mcp>=1.0.0",
    "langchain-core>=0.2",
    "langgraph>=0.2",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
